--- a/css/styles.css
+++ b/css/styles.css
@@ -167,19 +167,21 @@ img {
   color: var(--white-color);
 }
 .hero {
+  text-align: center;
+  background-color: var(--dark-color);
+}
+.hero-container {
   padding-top: 200px;
   padding-bottom: 200px;
-  text-align: center;
   height: 600px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: var(--dark-color);
 }
 
 /* Кнопка */
