--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,17 @@ img {
   margin-left: var(--card-set-gap);
   flex-basis: calc(100% / 4 - var(--card-set-gap));
 }
+.strengths .item::before {
+  display: block;
+  content: '';
+  height: 120px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
+  background-color: var(--section-light-color);
+  border-radius: 4px;
+}
 
 /* Секція чим ми займаємося */
 .foto {
