--- a/css/styles.css
+++ b/css/styles.css
@@ -365,6 +365,43 @@ img {
   margin-bottom: 16px;
 }
 
+/* Секція постійні клієнти */
+.section.regular-customers {
+  background-color: tomato;
+}
+.regular-customers .container {
+  text-align: center;
+  background-color: teal;
+}
+.regular-customers .title {
+  margin-bottom: 50px;
+}
+.regular-customers .list {
+  display: flex;
+  justify-content: center;
+}
+
+.regular-customers .item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  background-color: thistle;
+  border: 1px solid var(--icon-bgcolor);
+  border-radius: 4px;
+}
+.regular-customers .item:not(:last-child) {
+  margin-right: 30px;
+}
+.regular-customers .icon {
+  fill: currentColor;
+}
+.regular-customers .item:hover,
+.regular-customers .item:focus {
+  border-color: var(--turquoise-color);
+}
+
 /* Фільтри */
 .list-filtr {
   display: flex;
