--- a/css/styles.css
+++ b/css/styles.css
@@ -385,8 +385,6 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
-  height: 92px;
   background-color: var(--white-color);
   color: var(--icon-bgcolor);
   border: 1px solid var(--icon-bgcolor);
@@ -395,14 +393,16 @@ img {
 .regular-customers .item:not(:last-child) {
   margin-right: 30px;
 }
-.regular-customers .icon {
-  fill: currentColor;
-}
 .regular-customers .item:hover,
 .regular-customers .item:focus {
   color: var(--turquoise-color);
   border-color: var(--turquoise-color);
-  cursor: pointer;
+}
+.regular-customers .link {
+  display: flex;
+}
+.regular-customers .icon {
+  fill: currentColor;
 }
 
 /* Фільтри */
