--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ img {
 .nav .link.current {
   color: var(--turquoise-color);
 }
-.contacts {
+.main-nav .contacts {
   display: flex;
   margin-left: auto;
 }
@@ -468,6 +468,9 @@ img {
 }
 
 /* footer */
+.footer .blok {
+  margin-right: 70px;
+}
 .footer .logo-web {
   color: var(--turquoise-color);
 }
@@ -504,4 +507,41 @@ img {
 }
 .contacts-ft .item {
   display: flex;
+}
+.footer .container {
+  display: flex;
+}
+.footer .social-network {
+  padding-top: 12px;
+  padding-bottom: 40px;
+}
+.social-network .connect {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--white-color);
+}
+.social-network .list {
+  display: flex;
+  background-color: teal;
+}
+.social-network .item {
+  display: flex;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background-color: aquamarine;
+  border-radius: 50%;
+}
+.social-network .link {
+  display: flex;
+  align-items: center;
+}
+.social-network .item:not(:last-child) {
+  margin-right: 10px;
 }
