--- a/css/styles.css
+++ b/css/styles.css
@@ -447,6 +447,11 @@ img {
   margin-left: var(--card-set-gap);
   flex-basis: calc(100% / 3 - var(--card-set-gap));
 }
+.examples .item:hover,
+.examples .item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .examples .title {
   margin-bottom: 4px;
 
