--- a/css/styles.css
+++ b/css/styles.css
@@ -386,19 +386,19 @@ img {
   justify-content: center;
   background-color: var(--white-color);
   color: var(--icon-bgcolor);
-  border: 1px solid var(--icon-bgcolor);
-  border-radius: 4px;
 }
 .regular-customers .item:not(:last-child) {
   margin-right: 30px;
 }
-.regular-customers .item:hover,
-.regular-customers .item:focus {
+.regular-customers .link:hover,
+.regular-customers .link:focus {
   color: var(--turquoise-color);
   border-color: var(--turquoise-color);
 }
 .regular-customers .link {
   display: flex;
+  border: 1px solid var(--icon-bgcolor);
+  border-radius: 4px;
 }
 .regular-customers .icon {
   fill: currentColor;
@@ -544,8 +544,8 @@ img {
 .social-network .item:not(:last-child) {
   margin-right: 10px;
 }
-.social-network .item:hover,
-.social-network .item:focus {
+.social-network .link:hover,
+.social-network .link:focus {
   color: var(--white-color);
   background-color: var(--turquoise-color);
 }
@@ -556,6 +556,7 @@ img {
   justify-content: center;
   width: 44px;
   height: 44px;
+  border-radius: 50%;
 }
 
 .social-network .icon {
