--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,18 @@ img {
   flex-basis: calc(100% / 4 - var(--card-set-gap));
 }
 
+.strengths .cont-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+
+  background-color: var(--section-light-color);
+  border-radius: 4px;
+}
+
 /* Секція чим ми займаємося */
 .foto {
   display: flex;
