--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,17 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .list {
   list-style: none;
   padding-left: 0;
@@ -68,13 +79,6 @@ img {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
-}
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Header */
@@ -213,10 +217,6 @@ img {
 }
 
 /* Секція наші сильні якості */
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 .section .title {
   font-weight: 700;
   font-size: 36px;
@@ -443,10 +443,13 @@ img {
   margin-left: var(--card-set-gap);
   flex-basis: calc(100% / 3 - var(--card-set-gap));
 }
-.examples .item:hover,
-.examples .item:focus {
+.examples .link:hover,
+.examples .link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.examples .link {
+  display: block;
 }
 .examples .title {
   margin-bottom: 4px;
